--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "aiphee/SimilarContent",
-    "description": "SimilarContent plugin for CakePHP",
+    "name": "aiphee/RelatedContent",
+    "description": "RelatedContent plugin for CakePHP",
     "type": "cakephp-plugin",
     "require": {
         "php": ">=5.4.16",
@@ -11,7 +11,7 @@
     },
     "autoload": {
         "psr-4": {
-            "SimilarContent\\": "src"
+            "RelatedContent\\": "src"
         }
     },
     "autoload-dev": {
