--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,26 @@
 {
-    "name": "aiphee/related-content",
-    "description": "RelatedContent plugin for CakePHP",
-    "type": "cakephp-plugin",
-    "require": {
-        "php": ">=5.4.16",
-        "cakephp/cakephp": "~3.1"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "*"
-    },
-    "autoload": {
-        "psr-4": {
-            "RelatedContent\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-        }
-    }
+  "name": "aiphee/related-content",
+  "description": "RelatedContent plugin for CakePHP",
+  "type": "cakephp-plugin",
+  "minimum-stability": "dev",
+  "require": {
+	"php": ">=5.4.16",
+	"cakephp/cakephp": "~3.1"
+  },
+  "require-dev": {
+	"phpunit/phpunit": "*",
+	"friendsofcake/cakephp-test-utilities": "dev-master",
+    "fig-r/psr2r-sniffer": "dev-master"
+  },
+  "autoload": {
+	"psr-4": {
+	  "RelatedContent\\": "src"
+	}
+  },
+  "autoload-dev": {
+	"psr-4": {
+	  "RelatedContent\\Test\\": "tests",
+	  "Cake\\Test\\Fixture\\": "./vendor/cakephp/cakephp/tests/Fixture"
+	}
+  }
 }
